test/sema/negative/subtyping4_array.impala
fn main(x: [int * 2]) -> () {
    let y : [bool] = x;
}
