test/sema/negative/subtyping4_array.out
subtyping4_array.impala:2 col 22: error: mismatched types: expected '[bool]' but found '[i32 * 2]' as initialization type
